2012-07-05  Sergio Martin <sergio.martin@artica.es>

	* pandoradb_data.sql
	pandoradb.data.postgreSQL.sql
	pandoradb.data.oracle.sql: Assign to the 
	default user (admin) the full access to 
	wizard (new metaconsole)

2012-07-05  Sergio Martin <sergio.martin@artica.es>

	* pandoradb.sql
	pandoradb.postgreSQL.sql
	pandoradb.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql
	extras/pandoradb_migrate_v3.1_to_v3.2.sql
	extras/pandoradb_migrate_v3.2_to_v4.0.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql: Added fields to
	wizard access to modules, network components and users tables.
	Remove all scripts

2012-07-05  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/module_manager_editor_common.php: Fix
	wrong sec in a link from operation to godmode

	Merged from 4.0.2

2012-07-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_html.php: Changed path to image in 
	html_print_image function if metaconsole is being using.
	
	* include/javascript/jquery.pandora.js: Added checks for jquery
	 dialog messages that avoid js warnings.

2012-07-05  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php
	include/javascript/pandora_modules.js
	include/javascript/pandora.js
	godmode/agentes/module_manager_editor_common.php
	godmode/modules/manage_network_components_form_common.php: 
	Fixed several bugs of the network/local components javascript
	code and added new fields to local components
	Add new code on advanced select for time to update it from
	javascript and a workaround to do it from code loaded through 
	ajax

2012-07-04  Sergio Martin <sergio.martin@artica.es>

	* include/functions_menu.php
	operation/agentes/estado_monitores.php
	operation/snmpconsole/snmp_view.php
	operation/users/user_edit.php
	images/skin/skin_default/include/styles/pandora.css
	general/header.php: Fixes of missed "sec" changes in the new