@@ -1,3 +1,8 @@
+2012-07-06  Sergio Martin <sergio.martin@artica.es>
+
+	* godmode/users/configure_user.php: Added wizard access 
+	option to users editor
+
 2012-07-05  Sergio Martin <sergio.martin@artica.es>
 
 	* pandoradb_data.sql
